Auto increment & store User ID for further using